--- a/.github/workflows/controller_test.yml
+++ b/.github/workflows/controller_test.yml
@@ -18,5 +18,6 @@ jobs:
     - name: Build and test contollers
       run: |
         gem install bundler
+        gem install sqlite3 -v '1.3.13' --source 'https://rubygems.org/'
         bundle install --jobs 4 --retry 3
         bundle exec rake test TEST=test/controllers/microposts_controller_test.rb
