--- a/.github/workflows/controller_test.yml
+++ b/.github/workflows/controller_test.yml
@@ -18,6 +18,7 @@ jobs:
     - name: Build and test contollers
       run: |
         gem install bundler
+        bundle update fog-ovirt
         sudo apt-get install libsqlite3-dev
         gem install sqlite3 -v '1.3.13' --source 'https://rubygems.org/'
         bundle install --jobs 4 --retry 3
