--- a/.github/workflows/controller_test.yml
+++ b/.github/workflows/controller_test.yml
@@ -19,6 +19,7 @@ jobs:
       run: |
         gem install bundler
         bundle update fog-ovirt
+        gem install ovirt-engine-sdk -v '4.3.0' --source 'https://rubygems.org/'
         sudo apt-get install libsqlite3-dev
         gem install sqlite3 -v '1.3.13' --source 'https://rubygems.org/'
         bundle install --jobs 4 --retry 3
